--- a/projects/campusbuzz.html
+++ b/projects/campusbuzz.html
@@ -43,7 +43,7 @@
   
             <div class="col-lg-12 portfolio-info">
               <br>
-              <h2 style="color:#12d640">CampusBuzz</h2>
+              <h2 style="color:#0b98ef">CampusBuzz</h2>
               <ul>
                 <li><strong>Tech Stack</strong>: Node.js, Express.js, MongoDB, HTML, CSS, JavaScript, jQuery</li>
                 <li><strong>Github URL</strong>: <a href="https://github.com/Rahul151004/CampusBuzz" target="_blank">Project Link</a></li>
