--- a/projects/venus.html
+++ b/projects/venus.html
@@ -43,7 +43,7 @@
   
             <div class="col-lg-12 portfolio-info">
               <br>
-              <h2 style="color:#12d640">Venus Online</h2>
+              <h2 style="color:#0b98ef">Venus Online</h2>
               <ul>
                 <li><strong>Tech Stack</strong>: MongoDB, Express.js, React.js, Node.js (MERN Stack)</li>
                 <li><strong>Github URL</strong>: <a href="https://github.com/Rahul151004/Venus-Online" target="_blank">Project Link</a></li>
