--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <div class="container">
 
       <h1><a href="index.html">Rahul Bhat</a></h1>
-      <h2 style="color:#fff">I'm <span class="typing" style="color:#12D640"></span></h2>
+      <h2 style="color:#fff">I'm <span class="typing" style="color:#0b98ef"></span></h2>
       <nav class="nav-menu d-none d-lg-block">
         <ul>
           <li class="active"><a href="#header"> <span>Home</span></a></li>
@@ -157,7 +157,7 @@
         </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-lg-0">
           <div class="icon-box">
-            <i class="ri-bar-chart-box-line" style="color: #1c7d32;"></i>
+            <i class="ri-bar-chart-box-line" style="color: #1c537d;"></i>
             <h3>Data Structures & Algorithms</h3>
           </div>
         </div>
@@ -205,7 +205,7 @@
 
             <div class="col-md-4 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100" style="padding:0px 0px;padding-bottom: 5px;display: inline-block;">
               <img src="assets/img/education/LPU.jpg" class="img-fluid" alt="">
-              <!-- <h4 style="text-align:left;"><a href="https://www.asu.edu/" target="_blank" style="color:#12d640">Arizona State University</a><br> </h4> -->
+              <!-- <h4 style="text-align:left;"><a href="https://www.asu.edu/" target="_blank" style="color:#0b98ef">Arizona State University</a><br> </h4> -->
               <p style="text-align:left;color:#fff;padding: 5px 10px;"><em>BTech in Computer Science & Engineering</em></p>
               <h5 style="text-align:left;padding: 0px 10px;">August 2022 - Present</h5>
               <h6 style="text-align:left;color:#fff;padding: 0px 10px;">Relevant Coursework</h6>
@@ -220,7 +220,7 @@
             </div>
             <div class="col-md-4 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100" style="padding:0px 0px;padding-bottom: 5px;display: inline-block;">
               <img src="assets/img/education/loyola.png" class="img-fluid" alt="">
-              <!-- <h4 style="text-align:left;"><a href="https://ahduni.edu.in/" target="_blank" style="color:#12d640">Ahmedabad University</a><br> </h4> -->
+              <!-- <h4 style="text-align:left;"><a href="https://ahduni.edu.in/" target="_blank" style="color:#0b98ef">Ahmedabad University</a><br> </h4> -->
               <p style="text-align:left;color:#fff;padding: 5px 10px;"><em>Schooling (1st - 12th Standard)</em></p>
               <h5 style="text-align:left;padding: 0px 10px;">June 2009 - April 2022</h5>
               <h6 style="text-align:left;color:#fff;padding: 0px 10px;">Relevant Coursework</h6>
@@ -338,7 +338,7 @@
       <div class="row">
           <div class="col-lg-12" data-aos="fade-up">
               <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-                <h4 style="text-align:left;"><a href="https://www.asu.edu/" style="color:#12d640">Arizona State University</a><br> </h4>
+                <h4 style="text-align:left;"><a href="https://www.asu.edu/" style="color:#0b98ef">Arizona State University</a><br> </h4>
                 <h5 style="text-align:left;">January 2021 - Present</h5>
                 <p style="text-align:left;color:#fff"><em>Software Engineer </em></p>
                 <ul style="text-align:left;">
@@ -348,7 +348,7 @@
                 </ul>
               </div>
               <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-                <h4 style="text-align:left;"><a href="https://www.augmenify.com/" style="color:#12d640">Augmenify Infotech Pvt. Ltd.</a><br> </h4>
+                <h4 style="text-align:left;"><a href="https://www.augmenify.com/" style="color:#0b98ef">Augmenify Infotech Pvt. Ltd.</a><br> </h4>
                 <h5 style="text-align:left;">August 2020 - November 2020</h5>
                 <p style="text-align:left;color:#fff"><em>Backend Developer</em></p>
                 <ul style="text-align:left;">
@@ -357,7 +357,7 @@
                 </ul>
               </div>
               <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-                <h4 style="text-align:left;"><a href="https://www.epitomesolutions.in/" style="color:#12d640">Epitome Corporation Pvt. Ltd.</a><br> </h4>
+                <h4 style="text-align:left;"><a href="https://www.epitomesolutions.in/" style="color:#0b98ef">Epitome Corporation Pvt. Ltd.</a><br> </h4>
                 <h5 style="text-align:left;">July 2019 - Dec 2019</h5>
                 <p style="text-align:left;color:#fff"><em>Software Developer</em></p>
                 <ul style="text-align:left;">
@@ -365,7 +365,7 @@
                 </ul>
               </div>
               <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-                <h4 style="text-align:left;"><a href="https://www.meditab.com/" target="_blank" style="color:#12d640">Meditab Software Pvt. Ltd.</a><br> </h4>
+                <h4 style="text-align:left;"><a href="https://www.meditab.com/" target="_blank" style="color:#0b98ef">Meditab Software Pvt. Ltd.</a><br> </h4>
                 <h5 style="text-align:left;">May 2018 - June 2018</h5>
                 <p style="text-align:left;color:#fff"><em>Programmer Analyst</em></p>
                 <ul style="text-align:left;">
@@ -376,7 +376,7 @@
                 </ul>
               </div>
               <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-                <h4 style="text-align:left;"><a href="https://www.sac.gov.in/Vyom/index.jsp" target="_blank" style="color:#12d640">Space Application Centre, ISRO</a><br> </h4>
+                <h4 style="text-align:left;"><a href="https://www.sac.gov.in/Vyom/index.jsp" target="_blank" style="color:#0b98ef">Space Application Centre, ISRO</a><br> </h4>
                 <h5 style="text-align:left;">Jan 2018 - May 2018</h5>
                 <p style="text-align:left;color:#fff"><em>Research Intern</em></p>
                 <ul style="text-align:left;">
