--- a/projects/postpoint.html
+++ b/projects/postpoint.html
@@ -43,7 +43,7 @@
   
             <div class="col-lg-12 portfolio-info">
               <br>
-              <h2 style="color:#12d640">PostPoint : Blogging Website</h2>
+              <h2 style="color:#0b98ef">PostPoint : Blogging Website</h2>
               <ul>
                 <li><strong>Tech Stack</strong>: MongoDB, Express.js, React.js, Node.js (MERN Stack)</li>
                 <li><strong>Website URL</strong>: <a href="https://postpoint.netlify.app/" target="_blank">Link</a></li>
