--- a/projects/restaurant.html
+++ b/projects/restaurant.html
@@ -43,7 +43,7 @@
   
             <div class="col-lg-12 portfolio-info">
               <br>
-              <h2 style="color:#12d640">Restaurant Website</h2>
+              <h2 style="color:#0b98ef">Restaurant Website</h2>
               <ul>
                 <li><strong>Tech Stack</strong>: HTML, CSS, JavaScript</li>
                 <li><strong>Github URL</strong>: <a href="https://github.com/Rahul151004/MyHTMLProjects" target="_blank">Project Link</a></li>
