--- a/projects/wanderease.html
+++ b/projects/wanderease.html
@@ -43,7 +43,7 @@
 
           <div class="col-lg-12 portfolio-info">
             <br>
-            <h2 style="color:#12d640">WanderEase</h2>
+            <h2 style="color:#0b98ef">WanderEase</h2>
 
             <ul>
               <li><strong>Tech Stack</strong>: Android (Java/Kotlin), Express.js, MongoDB, Node.js</li>
